k8s/core.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kopeio-auth

---

apiVersion: v1
kind: Service
metadata:
  name: auth-api
  namespace: kopeio-auth
spec:
  selector:
    app: auth-api
  ports:
  - port: 443
    targetPort: 9002

---

apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: auth-api
  namespace: kopeio-auth
spec:
  template:
    metadata:
      labels:
        app: auth-api
    spec:
      serviceAccountName: auth-api
      hostNetwork: true
      nodeSelector:
        node-role.kubernetes.io/master: ""
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
      containers:
      - name: auth-api
        image: kopeio/auth-api:1.0.20170506
        imagePullPolicy: Always
        ports:
        - containerPort: 9001
        command:
        - /auth-api
        - --listen=127.0.0.1:9001
        - --secure-port=9002
        - --etcd-servers=http://127.0.0.1:4001
        - --v=8
        - --storage-backend=etcd2
