k8s/manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kopeio-auth

#---
#
#apiVersion: v1
#kind: ConfigMap
#metadata:
#  name: auth-portal
#  namespace: kopeio-auth
#data:
#  auth-portal.cfg: |-
#    EmailDomains:
#    - "*"

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: auth-portal
  namespace: kopeio-auth
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: auth-portal
    spec:
      serviceAccountName: auth-portal
      containers:
      - name: auth-portal
        image: kopeio/auth-portal:1.0.20170506
        ports:
        - containerPort: 8080
        command:
        - /auth-portal
        - --server=https://auth-api
        - --insecure-skip-tls-verify

---

apiVersion: v1
kind: Service
metadata:
  name: auth-portal
  namespace: kopeio-auth
spec:
  selector:
    app: auth-portal
  ports:
  - port: 80
    targetPort: 8080

---

# API service, needed until we have API aggregation
apiVersion: v1
kind: Service
metadata:
  name: auth-api
  namespace: kopeio-auth
spec:
  selector:
    app: auth-api
  ports:
  - port: 443
    targetPort: 9002

---

apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: auth-api
  namespace: kopeio-auth
spec:
  template:
    metadata:
      labels:
        app: auth-api
    spec:
      serviceAccountName: auth-api
      hostNetwork: true
      nodeSelector:
        node-role.kubernetes.io/master: ""
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
      containers:
      - name: auth-api
        image: kopeio/auth-api:1.0.20170506
        imagePullPolicy: Always
        ports:
        - containerPort: 9001
        command:
        - /auth-api
        - --listen=127.0.0.1:9001
        - --secure-port=9002
        - --etcd-servers=http://127.0.0.1:4001
        - --v=8
        - --storage-backend=etcd2
