k8s/portal.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: auth-portal
  namespace: kopeio-auth
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: auth-portal
    spec:
      serviceAccountName: auth-portal
      containers:
      - name: auth-portal
        image: kopeio/auth-portal:1.0.20170506
        ports:
        - containerPort: 8080
        command:
        - /auth-portal
        - --v=8
        #- --server=https://auth-api
        #- --insecure-skip-tls-verify

---

apiVersion: v1
kind: Service
metadata:
  name: auth-portal
  namespace: kopeio-auth
spec:
  selector:
    app: auth-portal
  ports:
  - port: 80
    targetPort: 8080
